--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   align-items: center;
   justify-content: center;
   align-content: center;
-
+  margin-left: -10px;
   width: 250px;
 }
 
