--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 #headerContainer {
   position: absolute;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   align-content: center;
@@ -23,4 +24,15 @@ body {
   margin-top: 100px;
   margin-left: 20px;
   z-index: 2;
+}
+
+#bar {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  height: 3px;
+  background: black;
+  width: 190px;
+  margin-top: -15px;
+  margin-left: 0px;
 }
