--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
   position: fixed;
   top: -100%;
   width: 300%;
+  pointer-events: none;
 }
 
 @keyframes grain {
@@ -65,6 +66,7 @@ body {
 
   height: 400px;
   width: 100%;
+  z-index: 1;
 }
 
 #headerContainer {
@@ -76,6 +78,7 @@ body {
   align-content: center;
   margin-left: -10px;
   width: 250px;
+  z-index: 1;
 }
 
 #mainParagraph {
